adding copy right

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<--! Copy Right 2014
+
+-->
 <head>
 	<title>example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
