adding conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 
 -->
 <head>
-	<title>example website</title>
+	<title>A very Respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
