--- a/simple.html
+++ b/simple.html
@@ -16,7 +16,7 @@ adding changes befire rebasing
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
-		<p>
+ome changes	<p>
 			Just some content
 		</p>
 	</main>
