adding simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 adding changes befire rebasing
 -->
 <head>
-	<title>A very Respectful website</title>
+	<title>Akzonobel</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ adding changes befire rebasing
 	<main class="container">
 	<!-- Content Goes Here -->
 ome changes	<p>
-			Just some content
+			Just some content added some content
 		</p>
 	</main>
 	<footer class="container">
