--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 adding changes befire rebasing
 -->
 <head>
-	<title>Akzonobel</title>
+	<title>Tagging for html files</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
